[workspace]
resolver = "2"
members = [
    "cosmos-sdk-proto",
    "cosmrs"
]
exclude = [
    "proto-build"
]

[workspace.dependencies]
# tendermint-rs (local fork)
tendermint = { path = "../tendermint-rs/tendermint" }
tendermint-proto = { path = "../tendermint-rs/proto" }
tendermint-rpc = { path = "../tendermint-rs/rpc" }
