[workspace]
resolver = "2"
members = [
    "cosmos-sdk-proto",
    "cosmrs"
]
exclude = [
    "proto-build"
]

[workspace.dependencies]
# tendermint-rs (local fork)
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-proto = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-rpc = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
