[package]
name = "cosmos-sdk-proto"
version = "0.28.0"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>",
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic", "tonic-prost"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
xion = []
serde = ["dep:serde", "pbjson"]

[dependencies]
bytes = "1.0" 
http-body-util = "0.1.3"
prost = { version = "0.14.3", default-features = false }
tendermint-proto = { workspace = true }

# Optional dependencies
pbjson = { package = "informalsystems-pbjson", path = "../../pbjson/pbjson", default-features = false, optional = true }
serde = { version = "1.0.203", optional = true, default-features = false, features = ["alloc"] }
tonic = { version = "0.14.5", optional = true, default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.5", optional = true, default-features = false }
